--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@types/node": "^16.18.6",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "axios": "^1.2.1",
+    "classnames": "^2.3.2",
+    "dotenv": "^16.0.3",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,6 +51,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
-    "@types/redux-actions": "^2.6.2"
+    "@types/redux-actions": "^2.6.2",
+    "json-server": "^0.17.1"
   }
 }
